@@ -1,4 +1,9 @@
 # -*- coding: utf-8 -*-
+2008-08-22  Luis Lavena  <luislavena@gmail.com>
+
+	* lib/rubygems.rb: Corrected usage of HOMEDRIVE and HOMEPATH on Windows.
+	* test/test_gem.rb: Added test to verify.
+
 2008-08-17  Eric Hodel  <drbrain@segment7.net>
 
 	* doc/release_notes/rel_1_3_0.rdoc:  Initial release notes for 1.3.0.
